force-app/main/default/objects/leaseworks__Lease_Document__c/leaseworks__Lease_Document__c.object-meta.xml
<CustomObject>
    <description>A lease document is a legal contract between a lessor and a lessee that outlines the terms and condition on using of an asset.</description>
    <label>Lease Document</label>
    <nameField>
        <label>Lease Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>