force-app/main/default/objects/leaseworks__Lease_Document__c/fields/leaseworks__Contract__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It&apos;s a Lookup field to Contract object</description>
    <label>Contract</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Lease Documents</relationshipLabel>
    <relationshipName>Lease_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>