force-app/main/default/objects/leaseworks__Lease_Document__c/fields/leaseworks__Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date__c</fullName>
    <description>Date of the document</description>
    <inlineHelpText>Date of the document</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>