force-app/main/default/objects/leaseworks__Lease_Document__c/fields/leaseworks__IsChanged__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IsChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identify the changes on Lease document record.</description>
    <label>IsChanged</label>
    <type>Checkbox</type>
</CustomField>