force-app/main/default/objects/leaseworks__Lease_Document__c/fields/leaseworks__Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Registration_Number__c</fullName>
    <description>This field indicates the attached Asset Registration Number.</description>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>