force-app/main/default/objects/leaseworks__Lease_Document__c/fields/leaseworks__RORA_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RORA_Status__c</fullName>
    <description>This field indicates the current Status of RORA.</description>
    <inlineHelpText>Recognition of Rights</inlineHelpText>
    <label>RORA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Issued</fullName>
            </value>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>