force-app/main/default/objects/leaseworks__Lease_Document__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <description>It allows users to select a value from a predefined list</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease Agreement</fullName>
                <default>true</default>
                <label>Lease Agreement</label>
            </value>
            <value>
                <fullName>Technical Acceptance Certificate</fullName>
            </value>
            <value>
                <fullName>Side Letter</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>RORA</fullName>
            </value>
            <value>
                <fullName>Warranties</fullName>
            </value>
            <value>
                <fullName>Lease Extension</fullName>
            </value>
            <value>
                <fullName>Novation</fullName>
            </value>
            <value>
                <fullName>Lease Restructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>