force-app/main/default/objects/leaseworks__Lease_Document__c/fields/leaseworks__URL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__URL__c</fullName>
    <description>External URL link</description>
    <inlineHelpText>External URL link</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>