force-app/main/default/objects/leaseworks__Lease_Document__c/validationRules/leaseworks__Date_cannot_be_futureDt.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Date_cannot_be_futureDt</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c == FALSE, $Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c == FALSE,leaseworks__Date__c &gt; TODAY(),ISPICKVAL(leaseworks__Type__c , &apos;RORA&apos;))</errorConditionFormula>
    <errorMessage>Date cannot be a Future Date.</errorMessage>
</ValidationRule>