force-app/main/default/objects/leaseworks__Lease_Document__c/validationRules/leaseworks__RORA_Date_cannot_be_futureDt.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RORA_Date_cannot_be_futureDt</fullName>
    <active>true</active>
    <description>RORA Received Date cannot be selected as future date, it should be always past date or today&apos;s date only for RORA type of document.</description>
    <errorConditionFormula>AND($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c == FALSE, $Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c == FALSE,leaseworks__RORA_Received_Date__c &gt; TODAY(),ISPICKVAL(leaseworks__Type__c , &apos;RORA&apos;))</errorConditionFormula>
    <errorMessage>RORA Received cannot be a Future Date.</errorMessage>
</ValidationRule>